--- a/style.css
+++ b/style.css
@@ -1,21 +1,32 @@
-body {
+/* *{
+   border: 1px solid red; 
+} */
+
+body {  
     margin: 0;
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+}
+
+button{
+    padding: 20px;
+    margin: 20px;
 }
 
 #container {
     display: flex;
     flex-wrap: wrap;
-    width: 512px;
-    height: 512px;
-    border: 2px solid black;
+    width: 720px;
+    height: 720px;
+    border: 1px solid black;
 }
 
 .square {
-    width: 30px;
-    height: 30px;
-    border: 1px solid gray;
+    width: 360px;
+    height: 360px;
+    background-color: green;
+    /* border: 1px solid gray; */
 }
